--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
+    "bootstrap": "^5.1.3",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.7.3",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
