--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.15",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
+    "mongoose": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-slideshow-image": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
